sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:2: error: illegal start of simple pattern
var int i=0
         ^AlgBubbleSort2:3: error: '=' expected but ';' found.
var int j=0
^AlgBubbleSort2:3: error: illegal start of simple pattern
var int j=0
         ^AlgBubbleSort2:4: error: '=' expected but ';' found.
def bubbleSort2() {
^AlgBubbleSort2:6: error: '<-' expected but ')' found.
     { for (j->0 to i)  {
                     ^AlgBubbleSort2:8: error: illegal start of simple expression
           }
           ^